Add icons to the pattern library

--- a/_patterns/cards/products.html
+++ b/_patterns/cards/products.html
@@ -1,51 +1,7 @@
 <div class="catagory-card">
+  <div class="gutter">
   <img class="img-flex" src="/images/products/soap.jpeg">
-  <h2>Soap</h2>
-  <p>Description description description</p>
-{% pattern buttons/light %}
-</div>
-
-
-<div class="product-card">
-  <img class="img-flex" src="/images/products/candle.jpeg">
-  <h2 class="pad-t">Aquamarine</h2>
-  <p>Description description description</p>
-  <div class="grid">
-  <div class="unit unit-content-distribute xs-1-2 s-1-2 m-1-2 l-1-2">
-  <ul class="micro">
-    <li>Detail</li>
-    <li>Detail</li>
-    <li>Detail</li>
-  </ul>
-</div>
-  <div class="unit unit-content-distribute xs-1-2 s-1-2 m-1-2 l-1-2">
-  <p class="giga bold">$120</p>
-{% pattern buttons/light %}
-</div>
-</div>
-
-<hr>
-<section>
-  <article>
-  <p class="text-left pad-t-2 nano">Bonny W. on Jan 14, 2019 Canada</p>
-  <h3 class="text-left bold">FAVOURITE BY FAR</h3>
-    <p class="text-left">This is my favourite candle in my collection!</p>
-  </article>
-
-  <article>
-    <p class="text-left pad-t-2 nano">Sarah H. on Jan 11, 2019 Canada</p>
-    <h3 class="text-left bold">LOVE</h3>
-    <p class="text-left pad-b">I get complimented on this candle all the time. Simply stunning</p>
-  </article>
-</section>
-</div>
-
-
-<div class="checkout-card">
-  <img class="img-flex" src="/images/products/crystal.jpeg">
-  <h2>Order Summary</h2>
-  <p>1 Item</p>
-    <p>Aquamarine</p>
-    <p>$120</p>
+  <h2 class="push-none pad-t-1-2 pad-b-1-4">Soap</h2>
+  <p class="push-none pad-b-1-2">Description description description</p>
 {% pattern buttons/light %}
 </div>
