Change the country field to an options menu

--- a/_patterns/forms/country.html
+++ b/_patterns/forms/country.html
@@ -1,4 +1,8 @@
-<div class="push unit xs-1 s-1 m-1 l-1-2 gutter country-field">
-  <label for="country">Country</label>
-  <input id="country" name="text" required>
+<div class="push unit xs-1 s-1 m-1 l-1-2 gutter country-field form">
+  <label for="subject">Country</label>
+  <select id="subject" name="_subject">
+    <option>Canada</option>
+    <option>US</option>
+    <option>Europe</option>
+  </select>
 </div>
