--- a/_patterns/forms/phone.html
+++ b/_patterns/forms/phone.html
@@ -1,4 +1,4 @@
-<div class="push unit xs-1 s-1 m-1 l-1-2 gutter phone-field">
+<div class="push unit xs-1 s-1 m-1 l-1-2 gutter phone-field form">
   <label for="number">Phone Number</label>
   <input id="number" name="number" required>
 </div>
