Style the input fields in css

--- a/_patterns/forms/email.html
+++ b/_patterns/forms/email.html
@@ -1,4 +1,4 @@
 <div class="push unit xs-1 s-1 m-1 l-1-2 gutter email-field form">
   <label for="email">Email</label>
-  <input id="email" type="email" name="email" required>
+  <input class="input" id="email" type="email" name="email" required>
 </div>
