--- a/_patterns/forms/address.html
+++ b/_patterns/forms/address.html
@@ -1,4 +1,4 @@
 <div class="push unit xs-1 s-1 m-1 l-1-2 gutter address-field form">
   <label for="address">Address</label>
-  <input id="address" name="text" required>
+  <input class="input" id="address" name="text" required>
 </div>
