--- a/_patterns/forms/country.html
+++ b/_patterns/forms/country.html
@@ -1,6 +1,6 @@
 <div class="push unit xs-1 s-1 m-1 l-1-2 gutter country-field form">
   <label for="subject">Country</label>
-  <select id="subject" name="_subject">
+  <select class="input" id="subject" name="_subject">
     <option>Canada</option>
     <option>US</option>
     <option>Europe</option>
