Add the secondary navigation and image plus text layout

--- a/_patterns/forms/address.html
+++ b/_patterns/forms/address.html
@@ -1,4 +1,7 @@
 <div class="push unit xs-1 s-1 m-1 l-1-2 gutter address-field form">
   <label for="address">Address</label>
   <input class="input" id="address" name="text" required>
+  <p class="error-message milli island 1-4 push-0" id="name-error" /></svg></i>
+  <span class="icon-label">Please provide a proper address</span>
+</p>
 </div>
