--- a/_patterns/forms/country.html
+++ b/_patterns/forms/country.html
@@ -5,4 +5,7 @@
     <option>US</option>
     <option>Europe</option>
   </select>
+  <p class="error-message milli island 1-4 push-0" id="name-error" /></svg></i>
+  <span class="icon-label">Please select a proper country.</span>
+</p>
 </div>
