--- a/_patterns/forms/email.html
+++ b/_patterns/forms/email.html
@@ -1,4 +1,8 @@
 <div class="push unit xs-1 s-1 m-1 l-1-2 gutter email-field form">
   <label for="email">Email</label>
   <input class="input" id="email" type="email" name="email" required>
+  <p class="error-message milli island-1-4 push-0">
+    <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+    <span class="icon-label">Please provide a properly formatted email address.</span>
+    <p>
 </div>
