--- a/_patterns/navigations-and-sections/product-filter.html
+++ b/_patterns/navigations-and-sections/product-filter.html
@@ -1,6 +1,6 @@
-<div class="push unit xs-1 s-1 m-1 l-1-2 gutter country-field form">
+<div class="push unit xs-1 s-1 m-1 l-1-2 gutter country-field products-filter">
   <label for="subject">Products</label>
-  <select id="subject" name="_subject">
+  <select class="products-filter" id="subject" name="_subject">
     <option>Handcrafted Soap</option>
     <option>Beeswax Candles</option>
     <option>Crystals</option>
