--- a/_patterns/forms/name.html
+++ b/_patterns/forms/name.html
@@ -1,5 +1,5 @@
 <div class="grid">
   <div class="push unit xs-1 s-1 m-1 l-1-2 gutter name-field form">
-    <label for="name">Name</label>
-    <input class="input" id="name" name="name" required>
+    <label for="name">Full name</label>
+    <input class="products-filter" id="name" name="name" required>
   </div>
