--- a/_patterns/navigations-and-sections/secondary-navigation.html
+++ b/_patterns/navigations-and-sections/secondary-navigation.html
@@ -1,7 +1,9 @@
-<ul class="list-group list-group-inline push-0 pad-b pad-t-1-2">
-    <li class="gutter-1-2"><a class="current" href="index.html">Handcrafted Soap</a></li>
-    <li class="gutter-1-2"><a class="li" href="rescues.html">Beeswax Candles</a></li>
-    <li class="gutter-1-2"><a class="li" href="adopt.html">Crystals</a></li>
-    <li class="gutter-1-2"><a class="li" href="donate.html">Handcrafted Throw Pillows</a></li>
-    <li class="gutter-1-2"><a class="li" href="form.html">Salt Lamps</a></li>
+<nav>
+  <ul class="list-group push-0 pad-b pad-t-1-2">
+    <li class="gutter-1-2 island-1-2"><a class="current" href="index.html">Handcrafted Soap</a></li>
+    <li class="gutter-1-2 island-1-2"><a class="li" href="index.html">Beeswax Candles</a></li>
+    <li class="gutter-1-2 island-1-2"><a class="li" href="index.html">Crystals</a></li>
+    <li class="gutter-1-2 island-1-2"><a class="li" href="index.html">Bath Bombs</a></li>
+    <li class="gutter-1-2 island-1-2"><a class="li" href="index.html">Salt Lamps</a></li>
   </ul>
+</nav>
