--- a/products.html
+++ b/products.html
@@ -1,5 +1,9 @@
 ---
 layout: default
+highlight_nav: 'products'
 ---
+{% pattern banner/banner heading="Our Products" text="Coze sells only the best hand-crafted home enhancers from artists around the Ottawa area." %}
 
-<h1>Home!</h1>
+{% for product in site.products %}
+  {% pattern cards/product-card data=product %}
+{% endfor %}
