--- a/_patterns/navigations-and-sections/secondary-navigation.html
+++ b/_patterns/navigations-and-sections/secondary-navigation.html
@@ -1,9 +1,9 @@
 <nav>
   <ul class="list-group push-0 pad-b pad-t-1-2">
-    <li class="gutter-1-2 island-1-2"><a class="current" href="index.html">Handcrafted Soap</a></li>
-    <li class="gutter-1-2 island-1-2"><a class="li" href="index.html">Beeswax Candles</a></li>
-    <li class="gutter-1-2 island-1-2"><a class="li" href="index.html">Crystals</a></li>
-    <li class="gutter-1-2 island-1-2"><a class="li" href="index.html">Bath Bombs</a></li>
-    <li class="gutter-1-2 island-1-2"><a class="li" href="index.html">Salt Lamps</a></li>
+    <li class="gutter-1-2 island-1-2"><a class="current" href="/products/product-1.html">Handcrafted Soap</a></li>
+    <li class="gutter-1-2 island-1-2"><a class="li" href="/products/product-2.html">Beeswax Candles</a></li>
+    <li class="gutter-1-2 island-1-2"><a class="li" href="/products/product-3.html">Crystals</a></li>
+    <li class="gutter-1-2 island-1-2"><a class="li" href="/products/product-4.html">Bath Bombs</a></li>
+    <li class="gutter-1-2 island-1-2"><a class="li" href="/products/product-5.html">Salt Lamps</a></li>
   </ul>
 </nav>
