--- a/_patterns/headers-and-footers/header.html
+++ b/_patterns/headers-and-footers/header.html
@@ -18,7 +18,7 @@
         <a class="header" href="/about/">About</a>
       </li>
 
-      <li class="nav-li {% if page.highlight_nav == 'products' %}current{% endif %} gutter-1-2 unit xs-1 s-1 m-1-4 l-1-4"><a class="header" href="/products/">Products</a>
+      <li class="nav-li {% if page.highlight_nav == 'products' %}current{% endif %} gutter-1-2 unit xs-1 s-1 m-1-4 l-1-4"><a class="header" href="/products">Products</a>
       </li>
 
       <li class="nav-li gutter-1-2 {% if page.highlight_nav == 'contact' %}current{% endif %} unit xs-1 s-1 m-1-4 l-1-4"><a class="header" href="adopt.html">Contact</a> </li>
