--- a/products.html
+++ b/products.html
@@ -4,6 +4,10 @@ layout: product
 
 {% pattern banner/banner heading="Cozy and beautiful" text="Coze sells only the best hand-crafted home enhancers from artists around the Ottawa area." %}
 
+<div class="pad-t">
+  {% pattern navigations-and-sections/product-filter %}
+</div>
+
 <div class="grid gutter-1-4">
 {% for products in site.products %}
 <div class=" unit xs-1 s-1 m-1-3 island-1-4">
