--- a/_patterns/cards/product-card.html
+++ b/_patterns/cards/product-card.html
@@ -1,4 +1,4 @@
-<div class="unit xs-1 s-1-2 m-1-3 l-1-4 card product-card text-center inline-block card-flex max-height">
+<div class="card product-card text-center inline-block card-flex max-height">
   <div class="embed embed-3by2">
   <img class="embed-item" src="{{include.data.img}}" alt="">
 </div>
