--- a/products.html
+++ b/products.html
@@ -9,7 +9,7 @@ layout: product
 </div>
 
 <div class="grid gutter-1-4">
-{% for products in site.products %}
+{% for product in site.products %}
 <div class=" unit xs-1 s-1 m-1-3 island-1-4">
   {% pattern cards/product-card data=product %}
 </div>
