Fix the content in the file

--- a/products.html
+++ b/products.html
@@ -2,8 +2,7 @@
 layout: product
 ---
 
-{% pattern banner/banner heading="Cozy and beautiful" text="Coze sells only the best hand-crafted home enhancers from artists around the Ottawa area." %}
-
+{{content}}
 <div class="pad-t">
   {% pattern navigations-and-sections/product-filter %}
 </div>
