Add a form around the field components

--- a/checkout-form.html
+++ b/checkout-form.html
@@ -2,6 +2,9 @@
 layout: default
 ---
 
+<form method="POST" action="https://formspree.io./lees0029@algonquinlive.com" class="grid">
+
+<div class="unit pad-t">
 {% pattern forms/name %}
 
 {% pattern forms/email %}
@@ -15,3 +18,5 @@ layout: default
 {% pattern forms/check-box %}
 
 {% pattern buttons/light text="check out" url=include.data.url %}
+</div>
+</form>
