Add a card to the file

--- a/_patterns/forms/check-box.html
+++ b/_patterns/forms/check-box.html
@@ -1,7 +1,7 @@
 <div class="push-1-2 pad-t-1-2">
   <input type="checkbox" id="check-box" required aria-describedby="agree-error">
   <label for="check-box">
-    <p class="error-message milli island-1-4 push-0" id="agree-error">
+    <p class="error-message milli push-0" id="agree-error">
       <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
       <span class="icon-label">Keep me up to date on news and exclusive offers.</span>
     </p>
