--- a/checkout-form.html
+++ b/checkout-form.html
@@ -18,5 +18,7 @@ layout: default
 {% pattern forms/check-box %}
 
 {% pattern buttons/light text="check out" url=include.data.url %}
+
+{% pattern cards/checkout-card %}
 </div>
 </form>
