Remove a card and the class of unit

--- a/checkout-form.html
+++ b/checkout-form.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<form method="POST" action="https://formspree.io./lees0029@algonquinlive.com" class="grid">
+<form method="POST" action="https://formspree.io./lees0029@algonquinlive.com">
 
-<div class="unit pad-t">
+<div class="pad-t">
 {% pattern forms/name %}
 
 {% pattern forms/email %}
@@ -18,7 +18,6 @@ layout: default
 {% pattern forms/check-box %}
 
 {% pattern buttons/light text="check out" url=include.data.url %}
-
-{% pattern cards/checkout-card %}
 </div>
+
 </form>
