--- a/products.html
+++ b/products.html
@@ -1,8 +1,7 @@
 ---
-layout: product
+layout: default
 ---
 
-{{content}}
 <div class="pad-t">
   {% pattern navigations-and-sections/product-filter %}
 </div>
