--- a/_patterns/cards/product-card.html
+++ b/_patterns/cards/product-card.html
@@ -5,5 +5,7 @@
   <h2 class="push-1-2 pad-1-2">{{include.data.title}}</h2>
   <p class="push-1-2">{{include.data.desc}}</p>
   <strong class="push-1-4 peta color-primary">${{include.data.price}}</strong>
+  <div class="island">
   {% pattern buttons/light text="Buy" %}
+</div>
   </div>
