Add the h1 to the checkout form

--- a/checkout-form.html
+++ b/checkout-form.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+<h1 class="checkout-h1 text-center pad-t"> Your Cart</h1>
+
 <form method="POST" action="https://formspree.io./lees0029@algonquinlive.com">
 
 <div class="pad-t">
