Add missing files & fix the repo

--- a/_patterns/banner/banner.html
+++ b/_patterns/banner/banner.html
@@ -1,7 +1,7 @@
   <div class="banner text-center">
-    <img class="img-flex" src="/images/bath-bomb.jpg" {{include.src}} alt="soap">
+    <img class="img-flex" src="/images/soap.jpg" {{include.src}} alt="soap">
     <div class="banner-content absolute pin-lb island-1-2 max-length">
-  <h1 class="banner-title push-1-8 tera">{{include.heading}}</h1>
+  <h1 class="banner-title push-1-8 yotta">{{include.heading}}</h1>
   <p class="banner-info push-1-2 p-banner">{{include.text}}</p>
   {% pattern buttons/light text="See Our Products" url="/bath-bomb" %}
   </div>
