--- a/_patterns/cards/product-card.html
+++ b/_patterns/cards/product-card.html
@@ -2,10 +2,10 @@
   <div class="embed embed-3by2">
   <img class="embed-item" src="{{include.data.img}}" alt="">
 </div>
-  <h2 class="push-1-2 pad-1-2 giga pad-t">{{include.data.title}}</h2>
+  <h2 class="push-1-2 pad-1-2">{{include.data.title}}</h2>
   <p class="push-1-2">{{include.data.desc}}</p>
-  <strong class="push-1-4 peta color-primary pad-b">${{include.data.price}}</strong>
-  <div class="pad-t">
+  <strong class="push-1-4 peta color-primary">${{include.data.price}}</strong>
+  <div class="island">
   {% pattern buttons/light text="Buy" url=include.data.url %}
 </div>
   </div>
