--- a/_patterns/headers-and-footers/header.html
+++ b/_patterns/headers-and-footers/header.html
@@ -14,15 +14,14 @@
         <a class="header" href="/">Home</a>
       </li>
 
-      <li class="nav-li gutter-1-5 {% if page.highlight_nav == 'home' %}current{% endif %} unit xs-1 s-1 m-1-4 l-1-4 island">
-        <a class="header" href="/about/">About</a>
-      </li>
-
       <li class="nav-li {% if page.highlight_nav == 'products' %}current{% endif %} gutter-1-2 unit xs-1 s-1 m-1-4 l-1-4"><a class="header" href="/products">Products</a>
       </li>
 
-      <li class="nav-li gutter-1-2 {% if page.highlight_nav == 'contact' %}current{% endif %} unit xs-1 s-1 m-1-4 l-1-4"><a class="header" href="adopt.html">Contact</a> </li>
+      <li class="nav-li gutter-1-2 {% if page.highlight_nav == 'contact' %}current{% endif %} unit xs-1 s-1 m-1-4 l-1-4"><a class="header" href="contact.html">Contact</a> </li>
     </ul>
+
+    <li class="nav-li gutter-1-2 {% if page.highlight_nav == 'cart' %}current{% endif %} unit xs-1 s-1 m-1-4 l-1-4"><a class="header" href="/checkout-form"><i class="icon i-32"><svg><use xlink:href="/images/icons.svg#cart"> </svg></i></a> </li>
+  </ul>
 
   </nav>
 </header>
