--- a/products.html
+++ b/products.html
@@ -2,14 +2,10 @@
 layout: default
 ---
 
-<div class="pad-t">
-  {% pattern navigations-and-sections/product-filter %}
-</div>
+{% pattern banner/banner heading="Cozy and beautiful" text="Coze sells only the best hand-crafted home enhancers from artists around the Ottawa area." %}
 
-<div class="grid gutter-1-4">
-{% for product in site.products %}
-<div class=" unit xs-1 s-1 m-1-3 island-1-4">
-  {% pattern cards/product-card data=product %}
-</div>
-{% endfor %}
+<div class="section-dark">
+  {% for product in site.products %}
+    {% pattern cards/product-card data=product %}
+  {% endfor %}
 </div>
