Add the content for the surprize pages

--- a/_patterns/headers-and-footers/footer.html
+++ b/_patterns/headers-and-footers/footer.html
@@ -11,6 +11,10 @@
     <img class="img-flex" src="/images/facebook-logo.png" alt="facebook-logo">
   </i>
   <div class="pad-t-1-2">
-    <small class="micro white-text pad-t-2">© 2018 Coze Inc. All rights reserved</small>
+
+    <small class="nav-li gutter-1-5 {% if page.highlight_nav == 'privacy-cookies-and-terms' %}current{% endif %} unit xs-1 s-1 m-1-4 l-1-4 island">
+      <a class="header" href="privacy-cookies-and-terms">Privacy, Cookies and Terms</a>
+    </small>
+
   </div>
 </footer>
