--- a/_patterns/navigations-and-sections/image-and-text.html
+++ b/_patterns/navigations-and-sections/image-and-text.html
@@ -7,7 +7,7 @@
   <p class="pad-t-1-2 gutter image-and-text-text">Coze sells only the best hand-crafted home enhancers from artists around the Ottawa area.</p>
 </div>
 
-<div class="caption island-1-4 unit xs-1-2 s-1-2 m-1-2 l-1-2 image-and-text">
+<div class="caption island-1-4 unit xs-1-2 s-1-2 m-1-2 l-1-2 image-and-text-text">
   <h2 class="push-0 not-bold soap-h2 pad-t-1-2 image-and-text-text">All products are locally made</h2>
   <p class="pad-t-1-2 gutter image-and-text-text">Coze sells only the best hand-crafted home enhancers from artists around the Ottawa area.</p>
 </div>
