Fix general styling for multiple pages
Including the cards, navigation alignment and colors for accessibility

--- a/_patterns/cards/product-card.html
+++ b/_patterns/cards/product-card.html
@@ -1,11 +1,11 @@
-<div class="card product-card text-center inline-block card-flex max-height">
+<div class="product-card">
   <div class="embed embed-3by2">
-  <img class="embed-item" src="{{include.data.img}}" alt="">
-</div>
+    <img class="embed-item" src="{{include.data.img}}" alt="">
+  </div>
   <h2 class="push-1-2 pad-1-2">{{include.data.title}}</h2>
   <p class="push-1-2">{{include.data.desc}}</p>
   <strong class="push-1-4 peta color-primary">${{include.data.price}}</strong>
   <div class="island">
-  {% pattern buttons/light text="Buy" url=include.data.url %}
-</div>
+    {% pattern buttons/light text="Buy" url=include.data.url %}
   </div>
+</div>
