--- a/_patterns/navigations-and-sections/image-and-text.html
+++ b/_patterns/navigations-and-sections/image-and-text.html
@@ -1,4 +1,4 @@
-<div class="grid">
+<div class="grid section-dark pad-t pad-b">
 <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
   <img class="img-flex soap-photo" src="/images/soap.jpg" alt="soap">
 </div>
