--- a/_patterns/navigations-and-sections/product-details-img-and-text.html
+++ b/_patterns/navigations-and-sections/product-details-img-and-text.html
@@ -1,4 +1,4 @@
-<div class="grid">
+<div class="grid section-">
     <div class="unit xs-1 s-1 m-1-2 l-1-2">
       <img class="img-flex" src="{{include.data.img}}" alt="">
     </div>
