Add different colour stylings

--- a/_patterns/navigations-and-sections/image-and-text.html
+++ b/_patterns/navigations-and-sections/image-and-text.html
@@ -1,18 +1,18 @@
 <div class="grid section-dark pad-t pad-b">
-<div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-  <img class="img-flex soap-photo" src="/images/soap.jpg" alt="soap">
-</div>
-<div class="caption island-1-4 unit xs-1-2 s-1-2 m-1-2 l-1-2 image-and-text">
-  <h2 class="push-0 not-bold soap-h2 pad-t text-center image-and-text-text">All products are locally made</h2>
-  <p class="pad-t-1-2 gutter image-and-text-text">Coze sells only the best hand-crafted home enhancers from artists around the Ottawa area.</p>
-</div>
+  <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+    <img class="img-flex soap-photo" src="/images/soap.jpg" alt="soap">
+  </div>
+  <div class="caption island-1-4 unit xs-1-2 s-1-2 m-1-2 l-1-2 image-and-text">
+    <h2 class="push-0 not-bold soap-h2 pad-t gutter image-and-text-text">All products are locally made</h2>
+    <p class="pad-t-1-2 gutter image-and-text-text">Coze sells only the best hand-crafted home enhancers from artists around the Ottawa area.</p>
+  </div>
 
-<div class="caption island-1-4 unit xs-1-2 s-1-2 m-1-2 l-1-2 image-and-text-text">
-  <h2 class="push-0 not-bold soap-h2 pad-t-1-2 image-and-text-text">All products are locally made</h2>
-  <p class="pad-t-1-2 gutter image-and-text-text">Coze sells only the best hand-crafted home enhancers from artists around the Ottawa area.</p>
-</div>
-<div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
-  <img class="img-flex soap-photo" src="/images/candle.jpeg" alt="candle">
-</div>
+  <div class="caption island-1-4 unit xs-1-2 s-1-2 m-1-2 l-1-2 image-and-text-text">
+    <h2 class="push-0 not-bold soap-h2 pad-t-1-2 image-and-text-text gutter">Supporting Ottawa and the Valley</h2>
+    <p class="pad-t-1-2 gutter image-and-text-text">Ottawa and the surrounding area is home to some of the most creative and talented entrepeneurs! Coze is a platform to show off our wonderful talent here in the capital.</p>
+  </div>
+  <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+    <img class="img-flex soap-photo" src="/images/candle.jpeg" alt="candle">
+  </div>
 
 </div>
