--- a/landing-page.html
+++ b/landing-page.html
@@ -11,11 +11,24 @@ highlight_nav: home
     <div class="unit xs-1 s-1 m-1-2 l-1-4">
       <div class="land">
         <div class="embed embed-3by2">
-          <img class="embed-item" src="/images/candle.jpeg" alt="">
+          <img class="embed-item" src="/images/crystal.jpeg" alt="">
         </div>
-        <h2 class="push-1-2 pad-1-2">Blha</h2>
-        <p class="push-1-2">blah</p>
-        <strong class="push-1-4 peta color-primary">$money</strong>
+        <h2 class="push-1-2 pad-b-12">Aquamarine Crystal</h2>
+        <p class="push-1-2">Aquamarine, named for the Latin phrase "water of the sea", is a beautiful blue-green colour. This gem promises to bring peace and balance to your everyday life</p>
+        <strong class="push-1-4 peta color-primary">$45</strong>
+        <div class="island">
+          {% pattern buttons/light text="Buy" url=include.data.url %}
+        </div>
+      </div>
+    </div>
+    <div class="unit xs-1 s-1 m-1-2 l-1-4">
+      <div class="land">
+        <div class="embed embed-3by2">
+          <img class="embed-item" src="/images/bath-bomb.jpeg" alt="">
+        </div>
+        <h2 class="push-1-2 pad-1-2">Peppermint Bath Bomb</h2>
+        <p class="push-1-2">This bath bomb of infused with hints of vanilla and is made with real lavender buds. It is sure to relax and unwind your soul after a long day.</p>
+        <strong class="push-1-4 peta color-primary">$7</strong>
         <div class="island">
           {% pattern buttons/light text="Buy" url=include.data.url %}
         </div>
@@ -26,9 +39,9 @@ highlight_nav: home
         <div class="embed embed-3by2">
           <img class="embed-item" src="/images/candle.jpeg" alt="">
         </div>
-        <h2 class="push-1-2 pad-1-2">Blha</h2>
-        <p class="push-1-2">blah</p>
-        <strong class="push-1-4 peta color-primary">$money</strong>
+        <h2 class="push-1-2 pad-1-2">Beeswax Candle</h2>
+        <p class="push-1-2">Our homemade beeswax candles are all natural and made with care. They are eco-friendly and create a lovely aroma in the home.</p>
+        <strong class="push-1-4 peta color-primary">$7</strong>
         <div class="island">
           {% pattern buttons/light text="Buy" url=include.data.url %}
         </div>
@@ -37,81 +50,68 @@ highlight_nav: home
     <div class="unit xs-1 s-1 m-1-2 l-1-4">
       <div class="land">
         <div class="embed embed-3by2">
-          <img class="embed-item" src="/images/candle.jpeg" alt="">
+          <img class="embed-item" src="/images/pillow.jpg" alt="">
         </div>
-        <h2 class="push-1-2 pad-1-2">Blha</h2>
-        <p class="push-1-2">blah</p>
-        <strong class="push-1-4 peta color-primary">$money</strong>
+        <h2 class="push-1-2 pad-1-2">Handcrafted Throw Pillow</h2>
+        <p class="push-1-2">This beautiful cushion is made with an amazing piece of fabric woven by Lily Aztek of Aztek Decore. </p>
+        <strong class="push-1-4 peta color-primary">$15</strong>
         <div class="island">
           {% pattern buttons/light text="Buy" url=include.data.url %}
         </div>
       </div>
     </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-4">
-      <div class="land">
-        <div class="embed embed-3by2">
-          <img class="embed-item" src="/images/candle.jpeg" alt="">
-        </div>
-        <h2 class="push-1-2 pad-1-2">Blha</h2>
-        <p class="push-1-2">blah</p>
-        <strong class="push-1-4 peta color-primary">$money</strong>
-        <div class="island">
-          {% pattern buttons/light text="Buy" url=include.data.url %}
-        </div>
-      </div>
+    <div>
     </div>
-  <div>
-</div>
 
-<div class="table-wrapper gutter section-dark">
-  <table class="push-0">
-    <caption class="mega">Bulk pricing table</caption>
+    <div class="table-wrapper gutter section-dark">
+      <table class="push-0">
+        <caption class="mega">Bulk pricing table</caption>
 
-    <thead>
-      <tr>
-        <th class=“quantity” scope="col">Quantity</th>
-        <th class=“price” scope="col">Price</th>
-        <th class=“discount” scope="col">discount</th>
-      </tr>
-    </thead>
+        <thead>
+          <tr>
+            <th class=“quantity” scope="col">Quantity</th>
+            <th class=“price” scope="col">Price</th>
+            <th class=“discount” scope="col">discount</th>
+          </tr>
+        </thead>
 
-    <tbody>
-      <tr>
-        <th scope="row">2</th>
-        <td> cookies and usage data </td>
-        <td>$5</td>
-      </tr>
+        <tbody>
+          <tr>
+            <th scope="row">2</th>
+            <td> cookies and usage data </td>
+            <td>$5</td>
+          </tr>
 
-      <tr>
-        <th scope="row">4</th>
-        <td>cookies and usage data</td>
-        <td>$4</td>
-      </tr>
+          <tr>
+            <th scope="row">4</th>
+            <td>cookies and usage data</td>
+            <td>$4</td>
+          </tr>
 
-      <tr>
-        <th scope="row">6</th>
-        <td>cookies and usage data</td>
-        <td>$5</td>
-      </tr>
+          <tr>
+            <th scope="row">6</th>
+            <td>cookies and usage data</td>
+            <td>$5</td>
+          </tr>
 
-      <tr>
-        <th scope="row">8</th>
-        <td>email address</td>
-        <td>$4</td>
-      </tr>
+          <tr>
+            <th scope="row">8</th>
+            <td>email address</td>
+            <td>$4</td>
+          </tr>
 
-<tfoot>
-      <tr>
-        <th scope="row">2</th>
-        <td>email address, name, credit card</td>
-        <td>$5</td>
-      </tr>
-    </tfoot>
-    </tbody>
+          <tfoot>
+            <tr>
+              <th scope="row">2</th>
+              <td>email address, name, credit card</td>
+              <td>$5</td>
+            </tr>
+          </tfoot>
+        </tbody>
 
-  </table>
-</div>
+      </table>
+    </div>
 
-<div class="section-dark pad-t pad-b text-center">
-{% pattern buttons/light text="Sign Up For Our Newsletter!" url=include.data.url %}
-</div>
+    <div class="section-dark pad-t pad-b text-center">
+      {% pattern buttons/light text="Sign Up For Our Newsletter!" url=include.data.url %}
+    </div>
