Fix the indendation on all pages

--- a/_patterns/headers-and-footers/footer.html
+++ b/_patterns/headers-and-footers/footer.html
@@ -5,10 +5,10 @@
     </i>
   </div>
   <i class="icon i-32">
-    <img class="img-flex" src="/images/instagram-logo.png" alt="instagram-logo">
+    <img class="img-flex" src="/images/instagram-logo.png" aria-label="instagram logo" alt="instagram-logo">
   </i>
   <i class="icon i-32">
-    <img class="img-flex" src="/images/facebook-logo.png" alt="facebook-logo">
+    <img class="img-flex" src="/images/facebook-logo.png" aria-label="facebook logo" alt="facebook-logo">
   </i>
   <div class="pad-t-1-2">
 
