--- a/_patterns/headers-and-footers/header.html
+++ b/_patterns/headers-and-footers/header.html
@@ -20,7 +20,7 @@
         <li class="{% if page.highlight_nav == 'contact' %}current{% endif %}"><a class="header island" href="contact.html">Contact</a> </li>
 
 
-        <li class="{% if page.highlight_nav == 'cart' %}current{% endif %}"><a class="header island" href="/checkout-form"><i class="icon i-32"><svg><use xlink:href="/images/icons.svg#cart"> </svg></i></a> </li>
+        <li class="{% if page.highlight_nav == 'cart' %}current{% endif %}"><a class="header island" aria-label="coze logo" href="/checkout-form"><i class="icon i-32"><svg><use xlink:href="/images/icons.svg#cart"> </svg></i></a> </li>
         </ul>
 
       </nav>
