--- a/_patterns/buttons/light.html
+++ b/_patterns/buttons/light.html
@@ -1,1 +1,1 @@
-<a class="btn btn-light" href="{{include.url}}">{{include.text}}</a>
+<a class="btn btn-light pad-t-1-4" href="{{include.url}}">{{include.text}}</a>
