--- a/privacy-cookies-and-terms.html
+++ b/privacy-cookies-and-terms.html
@@ -233,8 +233,8 @@ highlight_nav: privacy-cookies-and-terms
 
     <p>If you have any questions about this Privacy Policy, please contact us:</p>
 
-    <ul class="gutter-1-2">
-      <li class="list-group"><a href="help@super-ecommerce.ca">By email</a></li>
+    <ul class="gutter-1-2 list-group">
+      <li><a href="help@super-ecommerce.ca">By email</a></li>
     </ul>
 
     <h2>Terms and Conditions (“Terms”)</h2>
